appId: ${APP_ID}
---
- clearState
- launchApp
- extendedWaitUntil:
    visible:
      text: ".*New Container.*"
    timeout: 10000
- tapOn:
    text: ".*New Container.*"
    retryTapIfNoChange: true
- assertVisible:
    id: "image_picker_button"
- tapOn:
    id: "container_name_input"
- inputText: "Garage Shelf 1"
- tapOn:
    id: "container_description_input"
- inputText: "Winter clothes and ski gear"
- scroll
- tapOn:
    id: "save_container_button"
- assertVisible:
    id: "home_screen_title"
